--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+# This is just an example to show that actuator port can be changed
+management.server.port=8081
+
 management.endpoints.web.exposure.include=*
 management.endpoint.health.probes.enabled=true
 management.endpoint.health.show-details=always
