--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,15 @@ management.server.port=8081
 management.endpoints.web.exposure.include=*
 management.endpoint.health.probes.enabled=true
 management.endpoint.health.show-details=always
+
+# change the actuator prefix that we use to access endpoints from actuator/health to actuator_demo/health.
+# management.endpoints.web.base-path = /actuator_demo
+
+# change the name of the health endpoint to my_health
+# management.endpoints.web.path_mapping.health = my_health
+
+#  http://localhost:8081/actuator/health/first_group
+management.endpoint.health.group.first_group.include = ping, diskSpace
+
+#  http://localhost:8081/actuator/health/second_group
+management.endpoint.health.group.second_group.include = random
